--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -18,7 +18,8 @@
     margin-top: 80px;
     display: flex;
     flex-direction: column;
-    min-width: 650px;
+    min-width: 660px;
     max-width: 800px;
-    padding-left: 10px;
+    // padding-left: 10px;
+    // overflow: hidden;
 }
