fixed link posts styling

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -381,9 +381,10 @@
 }
 
 .post-link-body-div {
-    min-height: 10px;
+    min-height: 20px;
     max-width: 580px;
     padding-left: 10px;
+    padding-bottom: 15px;
     font-size: 25px;
 }
 
