--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -64,10 +64,11 @@
 //         width: 480px;
 //     }
 // }
-// @viewport {
-//     width: device-width;
-//     zoom: 1.0;
-// }
+
+@viewport {
+    width: device-width;
+    zoom: 1.0;
+}
 
 
 
