--- a/app/assets/stylesheets/session-form.scss
+++ b/app/assets/stylesheets/session-form.scss
@@ -7,6 +7,14 @@
     left: 0;
 }
 
+ @media only screen and (max-width: 600px) {
+    .form-container {
+        position: relative;
+    }
+
+ }
+
+
 .linkto-flex {
     position: absolute;
     display: flex;
@@ -31,6 +39,21 @@
     flex-direction: column;
     align-items: center;
 }
+
+ @media only screen and (max-width: 600px) {
+    .form-box {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        left: 10%;
+        right: 10%;
+        top: 10%;
+        bottom: 10%;
+    }
+
+ }
+
 
 .form {
    display: flex;
