--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -30,6 +30,7 @@
     // border: 3px solid red;
     width: 580px;
     background-color: white;
+    border-radius: 5px;
 }
 
 .post-form-header {
@@ -42,6 +43,7 @@
     justify-content: space-between;
     background-color: white;
     text-align: center;
+    border-radius: 5px;
 }
 
 .title-text {
@@ -101,7 +103,7 @@
     // border: 3px solid red;
     width: 580px;
     background-color: white;
-    // border-radius: 5px;
+    border-radius: 5px;
 }
 
 // .photo-post {
