--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -1,146 +1,20 @@
-@media only screen and (max-width: 600px) {
-    
-    .form-container {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .form-box {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .post-form-box {
-        display: flex;
-        align-self: center;
-    }
-
-    .posts-main-div {
-        height: 80vh;
-        width: 80%;
-    }
-
-    .posts-index-list > * {
-        left: 0vw;
-    }
-    .posts-form-div {
-        left: 50%;
-        margin-left: 50%;
-        margin-bottom: 10px;
-
-    }
-
-    .post_buttons {
-        width: fit-content;
-    }
-
-    .posts-index {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .posts-index > * {
-        left: 50%;
-        margin-left: 50%;
-    }
-}
-
 
 // /* Mobile Styles */
 @media only screen and (max-width: 400px) {
-    .form-container {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .form-box {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .post-form-box {
-        display: flex;
-        align-self: center;
-    }
-
-    .posts-main-div {
-        height: 80vh;
-        width: 80%;
-    }
-
-    .posts-index-list>* {
-        left: 0vw;
-    }
-
-    .posts-form-div {
-        left: 50%;
-        margin-left: 50%;
-        margin-bottom: 10px;
-
-    }
-
-    .post_buttons {
-        width: fit-content;
-    }
-
-    .posts-index {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .posts-index>* {
-        left: 50%;
-        margin-left: 50%;
+    * {
+        height: 100vh;
+        width: 100vw;
     }
 }
+
+// @media only screen and (max-width: 600px) {
+    
+// }
+
 
 // /* Tablet Styles */
-@media only screen and (min-width: 401px) and (max-width: 960px) {
-    .form-container {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .form-box {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .post-form-box {
-        display: flex;
-        align-self: center;
-    }
-
-    .posts-main-div {
-        height: 80vh;
-        width: 80%;
-    }
-
-    .posts-index-list>* {
-        left: 0vw;
-    }
-
-    .posts-form-div {
-        left: 50%;
-        margin-left: 50%;
-        margin-bottom: 10px;
-
-    }
-
-    .post_buttons {
-        width: fit-content;
-    }
-
-    .posts-index {
-        left: 50%;
-        margin-left: 50%;
-    }
-
-    .posts-index>* {
-        left: 50%;
-        margin-left: 50%;
-    }
-}
+// @media only screen and (min-width: 401px) and (max-width: 960px) {
+// }
 
 // /* Desktop Styles */
 // @media only screen and (min-width: 961px) {
@@ -154,46 +28,13 @@
 //     }
 // }
 
-@media screen and (min-width: 321px) and (max-width: 480px) {
+// @media screen and (min-width: 321px) and (max-width: 480px) {
 
-    // /* comes into effect for screens between 321 and 480 pixels (inclusive) */
-    // #somethingorother {
-    //     width: 320px;
-    // }
-
-    .form-container {
-        width: 320px;
-    }
-
-    .form-box {
-        width: 320px;
-    }
-
-    .post-form-box {
-        width: 320px;
-        display: flex;
-        align-self: center;
-    }
-
-    .posts-main-div {
-       width: 320px;
-    }
-
-    .posts-index-list > * {
-        width: 320px;
-    }
-    .posts-form-div {
-      width: 320px;
-    }
-
-    .posts-index {
-       width: 320px;
-    }
-
-    .posts-index > * {
-        width: 320px;
-    }
-}
+//     // /* comes into effect for screens between 321 and 480 pixels (inclusive) */
+//     // #somethingorother {
+//     //     width: 320px;
+//     // }
+// }
 
 // @media screen and (min-width: 481px) {
 
