--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -1,11 +1,7 @@
 
 // /* Mobile Styles */
-@media only screen and (max-width: 400px) {
-    * {
-        height: 100vh;
-        width: 100vw;
-    }
-}
+// @media only screen and (max-width: 400px) {
+// }
 
 // @media only screen and (max-width: 600px) {
     
