--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -8,11 +8,11 @@
 @media only screen and (max-width: 600px) {
 
     .form-container {
-        position: absolute;
-        top: 40%;
-        bottom: 0%;
-        right: 40%;
-        left: 0%;
+        padding-top: 0px;
+        padding-right: 0px;
+        padding-bottom: 150px;
+        padding-left: 100px;        
+
     }
 
     .posts-main-div {
@@ -28,7 +28,7 @@
         z-index: -1;
     }
     .icons-box {
-        width: 80%;
+        // width: 80%;
         z-index: 4;
     }
     .posts-index-list {
@@ -45,12 +45,13 @@
 
     }
     .modal-box {
-        // width: 100%;
-        max-width: 200px;
         overflow-y: auto;
         z-index: 5;
-        padding-right: 20px;
-        margin-right: 20px;
+        padding-right: 75px;
+        margin-right: 75px;
+        width: 150px;
+        align-items: center;
+        align-content: center;
     }
 }
 
