--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -1,161 +1,11 @@
 // /* Mobile Styles */
 // @media only screen and (max-width: 400px) {
 // }
-@viewport {
-    width: device-width;
-    zoom: 1.0;
-}
-@media only screen and (max-width: 600px) {
-
-    .form-container {
-        height: 100vh;
-        padding-top: 0px;
-        padding-right: 0px;
-        padding-bottom: 600px;
-        padding-left: 150px;
-
-    }
-
-    .posts-main-div {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 20%;
-        margin-top: 120px;
-        display: flex;
-        flex-direction: column;
-        max-width: 300px;
-        z-index: -1;
-    }
-    .icons-box {
-        width: 80%;
-        z-index: 4;
-    }
-    .posts-index-list {
-        top: 20%;
-    }
-    .posts-index-list> * {
-        margin-bottom: 30px;
-        border-radius: 5px;
-        min-height: 300px;
-        font-family: sans-serif;
-        width: 80%;
-        max-width: 300px;
-        right: 20%;
-
-    }
-
-    .modal-box {
-        overflow-y: auto;
-        z-index: 5;
-        padding-right: 150px;
-    }
-
-    .post-form-footer {
-        background-color: white;
-        padding: 15px 20px;
-        text-align: center;
-    }
-
-    .post-form-header {
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        height: 20px;
-        font-size: 13px;
-        padding: 15px 15px 10px 20px;
-        color: black;
-        display: flex;
-        justify-content: space-between;
-        background-color: white;
-        text-align: center;
-        border-radius: 5px;
-    }
-
-    .photo-body-text {
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        padding: 20px 20px;
-        height: 75px;
-        border: none;
-        font-size: 13px;
-        resize: none;
-    }
-
-
-
-    .upload-file {
-        color: #989898;
-        text-align: center;
-        font-size: 14px;
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        padding: 5px 20px;
-        border-top: 1px dashed grey;
-        border-bottom: 1px dashed grey;
-        background-color: #f2f2f2;
-        height: 170px;
-        cursor: pointer;
-    }
-
-    .submit-button {
-        width: 62px;
-        height: 28px;
-        padding: 5px 10px;
-        background-color: #00B8FF;
-        border: none;
-        border-radius: 2px;
-        text-align: center;
-        cursor: pointer;
-        font-size: 13px;
-        color: white;
-
-    .title-text {
-        font-size: 35px;
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        padding: 5px 20px;
-        min-height: 37px;
-        border: none;
-    }
-
-    .body-text {
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        padding: 20px 20px;
-        height: 75px;
-        border: none;
-        font-size: 13px;
-        resize: none;
-    }
-
-    .text-form {
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        background-color: white;
-        border-radius: 5px;
-    }
-
-    .text-form-modal-user-pic-div {
-        display: flex;
-        width: 70px;
-    }
-
-    .post_buttons {
-        background-color: white;
-        border-radius: 5px;
-        right: 20%;
-        width: 80%;
-        max-width: 300px;
-        height: 90px;
-    }
-}
+// @viewport {
+//     width: device-width;
+//     zoom: 1.0;
+// }
+// @media only screen and (max-width: 600px) {
 
 // /* Tablet Styles */
 // @media only screen and (min-width: 401px) and (max-width: 960px) {
