--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,143 +1,42 @@
-// .posts-main-div {
-//     position: absolute;
-//     top: 0;
-//     bottom: 0;
-//     left: 22%;
-//     // border: 3px solid red;
-//     margin-top: 80px;
-//     display: flex;
-//     flex-direction: column;
-//     min-width: 650px;
-//     max-width: 800px;
-//     z-index: -1;
-//     // padding: 20px;
-// }
 
-// .posts-form-div {
-//     display: flex;
-//     justify-content: flex-end;
-//     // border: 3px solid green;
-//     margin-bottom: 40px;
-// }
+.dashboard-div {
+    position: absolute;
+    top: 8%;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+}
 
-// // .current-user-pic, 
-// .user-img {
-//     display: flex;
-//     justify-content: start;
-//     height: 64px;
-//     width: 64px;
-//     // border: 5px solid purple;
-//     // margin-right: 5px;
-//     // background-image: image-url("default_user_pic.jpg");
-//     background-size: cover;
-//     background-position: center;
-//     margin-right: 15px;
-//     border-radius: 5px;
-// }
-
-// .posts-index-div {
-//     border: 3px solid green;
-//     display: flex;
-//     justify-content: flex-end;
-// }
-
-// .posts-index-list {
-//     // border: 2px solid red;
-//     // width: 580px;
-//     // max-width: 580;
-//     min-height: 200px;
-//     background-size: cover;
-//     background-position: center;
-//     display: flex;
-//     flex-direction: column;
-// }
-
-// .posts-index-list>* {
-//     background-color: rgb(255, 255, 0);
-//     // border: 2px solid black;
-//     max-width: 580px;
-//     min-height: 500px;
-//     max-height: 500px;
-//     margin-bottom: 30px;
-//     border-radius: 5px;
-// }
-
-// .post-img {
-//     display: flex;
-//     justify-content: start;
-//     padding-top: 40px;
-//     height: 400px;
-//     max-width: 580px;
-//     background-size: cover;
-//     background-position: center;
-// }
-
-// .pic-column {
-//     display: flex;
-//     flex-direction: column;
-// }
-
-// .post-user-pic {
-//     display: flex;
-//     height: 500px;
-//     width: 70px;
-//     border: 2px solid purple;
-//     margin-right: 5px;
-//     background-size: cover;
-//     background-position: center;
-//     margin-bottom: 30px;
-// }
-
-
-
-// .post-user-img {
-//     display: flex;
-//     height: 64px;
-//     width: 64px;
-//     min-height: 64px;
-//     min-width: 64px;
-//     background-color: rgba(90, 230, 90, .8);
-//     background-image: image-url("motorcycle.jpg");
-//     background-size: cover;
-//     background-position: center;
-//     margin-right: 15px;
-//     border-radius: 3px;
-// }
-
-// .post-user-pic-img:first-child {
-//     border: none;
-
-// }
-
-// .post-text {
-//     font-size: 30px;
-//     background-color: white;
-//     height: 300px;
-//     max-width: 580px;
-//     align-items: center;
-//     align-content: center;
-// }
-
-
+.clearfix {
+    zoom: 1;
+}
 
 .posts-main-div {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 22%;
-    // border: 3px solid red;
-    margin-top: 80px;
+    // border: 1px solid rgb(255, 0, 170);
+    margin-top: 30px;
+
     display: flex;
-    flex-direction: column;
-    max-width: 660px;
-    z-index: -1;
+
+    max-width: 1000px;
+}
+
+.recommended-blogs-div {
+    margin-left: 20px;
+    // border: 1px solid yellow;
+    height: 700px;
+    width: 320px;
+    position: sticky;
+    font-size: 20px;
+    color: white;
 }
 
 .posts-form-div {
     display: flex;
     justify-content: flex-end;
     // border: 3px solid green;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+
 }
 
 .user-img {
@@ -145,43 +44,29 @@
     justify-content: start;
     height: 64px;
     width: 64px;
-    // border: 5px solid purple;
-    // margin-right: 5px;
-    // background-image: image-url("default_user_pic.jpg");
     background-size: cover;
     background-position: center;
     margin-right: 15px;
     border-radius: 5px;
 }
 
-.posts-index-div {
-    // border: 3px solid green;
-    display: flex;
-    justify-content: flex-end;
-}
-
 .posts-index-list {
     // border: 2px solid red;
-    // width: 580px;
-    // max-width: 580;
-    // min-height: 200px;
-    // background-size: cover;
-    // background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
 .posts-index-list > * {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     border-radius: 5px;
-    min-height: 300px;
     font-family: sans-serif;
 }
 // ---------------------------------------------------------------
 .post-photo {
     // border: 5px solid yellow;
-    font-size: 30px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
 }
