--- a/app/assets/stylesheets/greeting.scss
+++ b/app/assets/stylesheets/greeting.scss
@@ -39,24 +39,44 @@
 // width: 100%;
 // height: 100%;
 
+.splash-logo-div {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    margin-top: 10px;
+    margin-left: 40px;
+    z-index: 1;
+}
+
+.splash-logo:hover {
+    color: red;
+    cursor: pointer;
+}
+
+.splash-logo {
+    font-size: 40px;
+    color: white;
+    font-weight: bolder;
+    font-family: sans-serif;
+}
+
 .splash-home {
+
     // background-image: image-url("snowbord.jpg");
     // background-size: cover;
     // background-position: center;
 
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-}
-
-.splash-home {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
+
 
 .splash-box {
     display: flex;
@@ -78,7 +98,6 @@
 }
 
 .get-started {
-    // background-color: rgb(7, 145, 199);
     background-color: #00b8ff;
     padding: 10px;
     padding-left: 100px;
