--- a/app/assets/stylesheets/post-form.scss
+++ b/app/assets/stylesheets/post-form.scss
@@ -1,15 +1,15 @@
 .post-form-box {
     display: flex;
-    // justify-content: flex-end;
-    justify-content: space-between;
     min-width: 650px;
     // border: 3px solid green;
+
 }
 
 .text-form-modal-user-pic-div {
     display: flex;
     width: 70px;
     // border: 2px solid purple;
+    margin-right: 10px
 }
 
 .text-form-modal-user-pic {
@@ -20,7 +20,7 @@
     min-width: 64px;
     background-size: cover;
     background-position: center;
-    // margin-right: 15px;
+    margin-right: 25px;
     border-radius: 5px;
     // position: sticky;
     // top: 10%;
@@ -28,7 +28,8 @@
 
 .text-form {
     // border: 3px solid red;
-    width: 580px;
+    min-width: 580px;
+    max-width: 580px;
     background-color: white;
     border-radius: 5px;
 }
@@ -37,6 +38,7 @@
     width: 545px;
     height: 20px;
     font-size: 13px;
+    font-family: sans-serif;
     padding: 15px 15px 10px 20px;
     color: black;
     display: flex;
@@ -74,29 +76,29 @@
 }
 
 .close-button {
-    width: 51px;
+    width: 60px;
     height: 30px;
     padding: 5px 7px;
     background-color: #9DA6AF;
     border: none;
     border-radius: 2px;
     text-align: center;
+    font-size: 13px;
     color: white;
     cursor: pointer;
-    font-size: 13px;
 }
 
 .submit-button {
-    width: 62px;
-    height: 28px;
-    padding: 5px 10px;
+    width: 60px;
+    height: 30px;
+    padding: 5px 7px;
     background-color: #00B8FF;
     border: none;
     border-radius: 2px;
     text-align: center;
-    cursor: pointer;
     font-size: 13px;
     color: white;
+    cursor: pointer;
 }
 
 .photo-form {
@@ -154,7 +156,7 @@
 .media-prev {
     display: block;
     margin: 0 auto;
-    width: 540px;
+    width: 580px;
     background-size: cover;
     background-repeat: no-repeat;
 }
